--- a/app/views/queries.html
+++ b/app/views/queries.html
@@ -1,62 +1,85 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>SpotPer</title>
-    <link rel="stylesheet" href="{{ url_for('static', filename='css/styles.css') }}">
-</head>
-<body>
-    <div class="container">
+    <head>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        
+        <title>SpotPer</title>
 
-        <h3>Álbuns acima da média de preço:</h3>
-        <table>
-            <thead>
-                <tr>
-                    <th>Código</th>
-                    <th>Número de Mídia</th>
-                    <th>Descrição</th>
-                    <th>Preço de Compra</th>
-                </tr>
-            </thead>
-            <tbody>
-                {% for album in albums %}
+        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
+        <link rel="stylesheet" href="{{ url_for('static', filename='css/styles.css') }}">
+        <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
+    </head>
+    <body>
+        <div class="container">
+
+            <h1 class="text-center mt-5 mb-4"><b>SpotPer</b></h1>
+
+            <hr class="my-5">
+
+            <h2 class="text-center mb-4"><b>ÁLBUNS ACIMA DA MÉDIA DE PREÇO</b></h2>
+
+            <br>
+
+            <table class="table" style="vertical-align: middle;">
+                <thead>
                     <tr>
-                        <td>{{ album.code }}</td>
-                        <td>{{ album.media_number }}</td>
-                        <td>{{ album.description }}</td>
-                        <td>{{ album.purchase_price }}</td>
+                        <th>CÓDIGO</th>
+                        <th>NÚMERO DE MÍDIA</th>
+                        <th>DESCRIÇÃO</th>
+                        <th>PREÇO DE COMPRA</th>
                     </tr>
-                {% endfor %}
-            </tbody>
-        </table>
+                </thead>
+                <tbody>
+                    {% for album in albums %}
+                        <tr>
+                            <td>{{ album.code }}</td>
+                            <td>{{ album.media_number }}</td>
+                            <td>{{ album.description }}</td>
+                            <td>{{ album.purchase_price }}</td>
+                        </tr>
+                    {% endfor %}
+                </tbody>
+            </table>
 
-        <h3>Gravadora com maior número de playlists que possuem pelo uma faixa composta pelo compositor Dvorack:</h3>
-        <ul>
-            {% for label in label %}
-                <p>{{ label.name }} </p>
-            {% endfor %}    
-        </ul>
+            <hr class="my-5">
 
-        <h3>Compositor(a) com maior número de faixas nas playlists existentes:</h3>
-        <ul>
-            {% for songwriter in songwriter %}
-                <p>{{ songwriter.name }} </p>
-            {% endfor %}   
-        </ul>
+            <h2 class="text-center mb-4"><b>GRAVADORA COM MAIOR NÚMERO DE PLAYLISTS QUE POSSUEM PELO MENOS UMA FAIXA COMPOSTA PELO COMPOSITOR DVORACK</b></h2>
 
-        <h3>Playlists, cujas faixas (todas) têm tipo de composição “Concerto” e
-            período “Barroco”:</h3>
-        <ul>
-            {% for cb in cb_playlist %}
-                <p>{{ cb.name|default('N/A') }} </p>
-            {% endfor %}   
-        </ul>
+            <ul>
+                {% for label in label %}
+                    <li><p>{{ label.name }}</p></li>
+                {% endfor %}    
+            </ul>
 
-        <a href="{{ url_for('routing.home') }}">
-            <button type="button">Voltar para a página inicial</button>
-        </a>
+            <hr class="my-5">
 
-    </div>
-</body>
+            <h2 class="text-center mb-4"><b>COMPOSITOR COM MAIOR NÚMERO DE FAIXAS NAS PLAYLISTS EXISTENTES</b></h2>
+            
+            <ul>
+                {% for songwriter in songwriter %}
+                <li><p>{{ songwriter.name }}</p></li>
+                {% endfor %}   
+            </ul>
+
+            <hr class="my-5">
+
+            <h2 class="text-center mb-4"><b>PLAYLISTS COMPOSTAS APENAS POR FAIXAS COM TIPO DE COMPOSIÇÃO "CONCERTO" E DO PERÍODO "BARROCO"</b></h2>
+            <ul>
+                {% for cb in cb_playlist %}
+                <li><p>{{ cb.name|default('N/A') }}</p></li>
+                {% endfor %}   
+            </ul>
+
+            <hr class="my-5">
+            <br>
+
+            <div class="text-center">
+                <a class="btn btn-secondary" href="{{ url_for('routing.home') }}">
+                    Voltar para a página inicial
+                </a>
+            </div>
+
+        </div>
+    </body>
 </html>
