adicionando colaboradores na aplicação

--- a/app/views/index.html
+++ b/app/views/index.html
@@ -73,4 +73,13 @@
         </div>
         
     </body>
+
+    <footer class="text-dark text-center py-3">
+        <div class="container">
+            <p class="mb-0">Autores do Projeto:</p>
+            <p class="mb-0">Catherine Markert</p>
+            <p class="mb-0">Vandemberg Monteiro</p>
+        </div>
+    </footer> 
+
 </html>
